<resources>
    <string name="app_name">SmarTID</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Rs.20">Rs.20</string>
    <string name="Rs.50">Rs.50</string>
    <string name="Rs.100">Rs.100</string>
    <string name="Rs.500">Rs.500</string>
    <string name="Rs.1000">Rs.1000</string>
    <string name="Prcd">Proceed</string>
    <string name="Reset">Reset</string>
    <string name="Price">Price</string>
    <string name="welcm">Welcome FSE ID:   </string>
    <string name="damage">Damage Card Stock</string>
    <string name="reloadstk">Reload Stock</string>
    <string name="enterserial">Enter the serial number to search</string>
    <string name="search">Search</string>
    <string name="rechrg">Recharge Cards</string>
    <string name="reload">Reload</string>
    <string name="Remaining_Balance">Remaining Balance</string>
    <string name="shop_hint">Enter shop name here</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="signin_text">Login</string>
    <string name="sale">Sale</string>
    <string name="get_cards">Get Cards</string>
    <string name="get_price">Get Price</string>
    <string name="view_card_stock">View Card Stock</string>
    <string name="view_reload_stock">View Reload Stock</string>
    <string name="check_card">Check Damage Card</string>
    <string name="appname">Smart Telecommunication Inventory Distribution</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount">Amount</string>
    <string name="existing_balance">Existing Balance</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="shopname">ShopName</string>
    <string name="reloadamount">ReloadAmount</string>
    <string name="textshop">textshop</string>
    <string name="shopnametest">shopNameTest</string>
    <string name="checkstatus">checkStatus</string>
    <string name="check">CHECK</string>
    <string name="enterserialno">EnterSerialNo</string>


</resources>
