<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.prabashdananjaya.smart.ShopActivity">


    <TextView
        android:id="@+id/shop_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/shop_hint"
        android:gravity="center"
        app:layout_heightPercent="15%"/>


    <EditText
        android:id="@+id/entershop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/shop_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/shopname"
        android:inputType="text"
        app:layout_heightPercent="15%" />

    <Button
        android:id="@+id/but_reload"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/my_button"
        android:text="@string/reload"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="50%" />

    <Button
        android:id="@+id/but_recharge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/but_reload"
        android:background="@drawable/my_button"
        android:text="@string/rechrg"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="50%" />

    <TextView
        android:id="@+id/tvcheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/but_reload"
        android:layout_below="@+id/entershop"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="124dp"
        android:text="@string/checkstatus" />

    <Button
        android:id="@+id/btncheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvcheck"
        android:layout_marginTop="48dp"
        android:background="@drawable/my_button"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:onClick="onCheck"
        android:text="@string/check" />


</android.support.percent.PercentRelativeLayout>
