<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.prabashdananjaya.smart.CardActivity">

    <LinearLayout
        android:id="@+id/layout20"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_heightPercent="10%">

        <CheckBox
            android:id="@+id/cb20"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/Rs.20" />

        <TextView
            android:id="@+id/tc20"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>

        <EditText
            android:id="@+id/eq20"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:ems="10"
            android:inputType="number"
            android:labelFor="@+id/edit_text20" />

        <TextView
            android:id="@+id/tprice20"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout50"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@+id/layout20"
        app:layout_heightPercent="10%">

        <CheckBox
            android:id="@+id/cb50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/Rs.50" />
        <TextView
            android:id="@+id/tc50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>

        <EditText
            android:id="@+id/eq50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tprice50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout100"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout50"
        android:orientation="horizontal"
        app:layout_heightPercent="10%">

        <CheckBox
            android:id="@+id/cb100"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Rs.100" />

        <TextView
            android:id="@+id/tc100"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>

        <EditText
            android:id="@+id/eq100"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tprice100"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout500"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout100"
        android:orientation="horizontal"
        app:layout_heightPercent="10%">

        <CheckBox
            android:id="@+id/cb500"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Rs.500" />

        <TextView
            android:id="@+id/tc500"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>

        <EditText
            android:id="@+id/eq500"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tprice500"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout1000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout500"
        app:layout_heightPercent="10%"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb1000"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Rs.1000" />

        <TextView
            android:id="@+id/tc1000"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>

        <EditText
            android:id="@+id/eq1000"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tprice1000"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/qlayout20"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout1000"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="75%"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/t20"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Rs.20" />

        <TextView
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>
        <TextView
            android:id="@+id/t1end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/qlayout50"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/qlayout20"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="75%"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/t50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Rs.50" />
        <TextView
            android:id="@+id/t2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>
        <TextView
            android:id="@+id/t2end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/qlayout100"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/qlayout50"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="75%"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/t100"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Rs.100" />
        <TextView
            android:id="@+id/t3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>
        <TextView
            android:id="@+id/t3end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/qlayout500"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/qlayout100"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="75%"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/t500"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Rs.500" />
        <TextView
            android:id="@+id/t4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>
        <TextView
            android:id="@+id/t4end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/qlayout1000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/qlayout500"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="75%"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/t1000"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Rs.1000" />
        <TextView
            android:id="@+id/t5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>
        <TextView
            android:id="@+id/t5end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tpricetot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout1000"
        android:layout_toEndOf="@id/qlayout20"
        android:textStyle="bold|italic"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="25%"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnsell"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tpricetot"
        android:layout_toEndOf="@id/qlayout50"
        android:layout_marginBottom="5dp"
        android:text="@string/sale"
        android:onClick="OnSellBtn"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="25%"
        android:background="@drawable/my_button"/>

    <Button
        android:id="@+id/btndisplaycard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnsell"
        android:layout_toEndOf="@id/qlayout100"
        android:onClick="OnDisplaycard"
        android:layout_marginBottom="5dp"
        android:text="@string/get_cards"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="25%"
        android:background="@drawable/my_button"/>

    <Button
        android:id="@+id/btnreset"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btndisplaycard"
        android:layout_toEndOf="@id/qlayout500"
        android:layout_marginBottom="5dp"
        android:text="@string/Reset"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="25%"
        android:background="@drawable/my_button"/>

    <Button
        android:id="@+id/btnget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnreset"
        android:layout_toEndOf="@id/qlayout1000"
        android:text="@string/get_price"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="25%"
        android:background="@drawable/my_button"/>


</android.support.percent.PercentRelativeLayout>